WIP: MessageCodeKey should be generic
We are hiding the stored class behind a non-generic facade, which
ends up hurting our lookups, as we have unbound converter lookup
-- i.e. type inference cannot correctly derive the converter's
type from the key.

// FIXME: finish conversion of all call sites
// FIXME: take advantage of the generic argument
// FIXME: consider splitting registries

Change-Id: I8c50a6b650025eff720fe7a19c1b6639762543bb
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>