@@ -5,13 +5,11 @@
  * terms of the Eclipse Public License v1.0 which accompanies this distribution,
  * and is available at http://www.eclipse.org/legal/epl-v10.html
  */
-
 package org.opendaylight.openflowjava.protocol.impl.deserialization.factories;
 
 import io.netty.buffer.ByteBuf;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import org.junit.Test;
 import org.opendaylight.openflowjava.protocol.api.keys.MessageCodeKey;
@@ -31,7 +29,7 @@ public class BarrierReplyMessageFactoryTest extends DefaultDeserializerFactoryTe
      * Initializes deserializer registry and lookups OF13 deserializer.
      */
     public BarrierReplyMessageFactoryTest() {
-        super(new MessageCodeKey(EncodeConstants.OF13_VERSION_ID, 21, BarrierOutput.class));
+        super(new MessageCodeKey<>(EncodeConstants.OF13_VERSION_ID, 21, BarrierOutput.class));
     }
 
     /**
@@ -48,7 +46,7 @@ public class BarrierReplyMessageFactoryTest extends DefaultDeserializerFactoryTe
         testHeaderVersions(versions, bb);
 
         // OFP v1.0 need to be tested separately cause of different message type value
-        messageCodeKey = new MessageCodeKey(EncodeConstants.OF10_VERSION_ID, 19, BarrierOutput.class);
-        testHeaderVersions(Collections.singletonList(EncodeConstants.OF10_VERSION_ID), bb);
+        messageCodeKey = new MessageCodeKey<>(EncodeConstants.OF10_VERSION_ID, 19, BarrierOutput.class);
+        testHeaderVersions(List.of(EncodeConstants.OF10_VERSION_ID), bb);
     }
 }
